# tiro

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitignore  .gitmodules  .prettierrc  .travis.yml  AUTHORS  CMakeLists.txt  Dependencies.cmake  IDEAS.md  LICENSE  README  README.md  TODO.md
examples/embed_cpp/: CMakeLists.txt  README.md  main.cpp
lib/hammer/: CMakeLists.txt
src/: CMakeLists.txt
src/api/: CMakeLists.txt  api.cpp  api.version.gcc  compiler.cpp  error.cpp  errors.cpp  functions.cpp  handles.cpp  internal.hpp  objects.cpp  private.hpp  utils.cpp  version.cpp  vm.cpp
src/bytecode/: CMakeLists.txt  disassembler.cpp  disassembler.hpp  entities.hpp  formatting.cpp  formatting.hpp  function.cpp  function.hpp  fwd.hpp  instruction.cpp  instruction.hpp  module.cpp  module.hpp  op.cpp  op.hpp  reader.cpp  reader.hpp  writer.cpp  writer.hpp
src/cmd/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  arena.cpp  arena.hpp  assert.cpp  assert.hpp  binary.hpp  bitops.hpp  byte_order.hpp  code_point_range.hpp  debug.hpp  defs.cpp  defs.hpp  dynamic_bitset.hpp  enum_flags.hpp  error.cpp  error.hpp  fix.hpp  format.cpp  format.hpp  function_ref.hpp  fwd.hpp  hash.hpp  id_type.hpp  index_map.hpp  iter_tools.hpp  math.hpp  not_null.hpp  overloaded.hpp  ref_counted.cpp  ref_counted.hpp  safe_int.hpp  scope.hpp  scope_guards.hpp  span.hpp  string_table.cpp  string_table.hpp  string_utils.cpp  string_utils.hpp  tagged_ptr.hpp  type_traits.hpp  (+4 more)
src/compiler/: CMakeLists.txt  binary.hpp  compiler.cpp  compiler.hpp  diagnostics.cpp  diagnostics.hpp  fwd.hpp  reset_value.hpp  source_db.cpp  source_db.hpp  source_map.cpp  source_map.hpp  source_range.cpp  source_range.hpp  source_reference.cpp  source_reference.hpp  utils.cpp  utils.hpp
src/hammer/: CMakeLists.txt
src/run/: CMakeLists.txt  c_main.c  main.cpp  main_new.cpp
src/tiro/: CMakeLists.txt
src/vm/: CMakeLists.txt  context.cpp  context.hpp  context.ipp  error_utils.hpp  fwd.hpp  hash.cpp  hash.hpp  interpreter.cpp  interpreter.hpp  load.cpp  load.hpp  load_module.cpp  load_module.hpp  math.cpp  math.hpp  module_loader.cpp  module_loader.hpp  module_registry.cpp  module_registry.hpp  root_set.cpp  root_set.hpp  root_set.ipp  type_system.cpp  type_system.hpp  types.cpp  types.hpp
test/: CMakeLists.txt  main.cpp  test_parser.hpp  test_rng.hpp
test/api/: CMakeLists.txt  frame_test.cpp  helpers.hpp  vm_test.cpp
test/api_tests/: CMakeLists.txt  helpers.hpp  matchers.hpp  tiro_compiler_test.cpp  tiro_functions_test.cpp  tiro_objects_test.cpp  tiro_vm_test.cpp  tiropp_compiler_test.cpp  tiropp_error_test.cpp  tiropp_functions_test.cpp  tiropp_native_type_test.cpp  tiropp_objects_test.cpp  tiropp_vm_test.cpp
test/bytecode_gen/: CMakeLists.txt  gen_test.cpp  locations_test.cpp  parallel_copy_test.cpp
test/codegen/: CMakeLists.txt  basic_block_test.cpp  variable_locations_test.cpp
test/common/: CMakeLists.txt  arena_test.cpp  byte_order_test.cpp  dynamic_bitset_test.cpp  format_stream_test.cpp  function_ref_test.cpp  hash_test.cpp  id_type.cpp  index_map_test.cpp  iter_tools_test.cpp  math_test.cpp  not_null.cpp  overloaded_test.cpp  ref_counted_test.cpp  safe_int_test.cpp  scope_test.cpp  string_table_test.cpp  tagged_ptr_test.cpp  type_traits_test.cpp  unicode_test.cpp  vec_ptr_test.cpp
test/compiler/: CMakeLists.txt  lexer.cpp  parser.cpp  simplifier.cpp  source_map.cpp  source_map_test.cpp  string_table.cpp  string_table_test.cpp  test_parser.hpp  token.cpp  utils_test.cpp  vec_ptr_test.cpp
test/core/: CMakeLists.txt  arena.cpp  arena_test.cpp  byte_order_test.cpp  dynamic_bitset_test.cpp  format_stream_test.cpp  function_ref_test.cpp  hash_test.cpp  id_type.cpp  index_map_test.cpp  iter_tools_test.cpp  math.cpp  math_test.cpp  not_null.cpp  overloaded.cpp  overloaded_test.cpp  ref_counted_test.cpp  rtti.cpp  safe_int_test.cpp  scope.cpp  scope_test.cpp  string_table_test.cpp  type_traits_test.cpp  unicode.cpp  unicode_test.cpp  vec_ptr_test.cpp
test/eval/: CMakeLists.txt  containers.cpp  containers_test.cpp  control_flow.cpp  control_flow_test.cpp  eval_context.cpp  eval_context.hpp  fibonacci.cpp  fibonacci_test.cpp  functions.cpp  functions_test.cpp  lib.cpp  math.cpp  modules.cpp  modules_test.cpp  objects.cpp  objects_test.cpp  operators_test.cpp  order.cpp  order_test.cpp  string.cpp  string_test.cpp  types_test.cpp  variables.cpp  variables_test.cpp
test/eval_tests/: CMakeLists.txt  containers_test.cpp  control_flow_test.cpp  eval_test.cpp  eval_test.hpp  example_test.cpp  exceptions_test.cpp  functions_test.cpp  matchers.hpp  modules_test.cpp  objects_test.cpp  operators_test.cpp  order_test.cpp  results_test.cpp  std_lib_test.cpp  strings_test.cpp  variables_test.cpp
test/heap/: CMakeLists.txt  collector_test.cpp  heap_test.cpp
test/ir/: CMakeLists.txt  critical_edges_test.cpp  dominators_test.cpp  eval_test.cpp  liveness_test.cpp  test_function.hpp  traversal_test.cpp  types_test.cpp
test/ir_gen/: CMakeLists.txt  transform_test.cpp
test/mir/: CMakeLists.txt  critical_edges_test.cpp  dominators_test.cpp  eval_test.cpp  test_function.hpp  transform_test.cpp  traversal_test.cpp  types.cpp  types_test.cpp  vec_ptr.cpp
test/mir_gen/: transform_test.cpp
test/objects/: arrays_test.cpp  buffers_test.cpp  classes_test.cpp  coroutine_test.cpp  hash_table_test.cpp  native_functions_test.cpp  native_object_test.cpp  small_integer_test.cpp  string_test.cpp  value_test.cpp
test/parser/: CMakeLists.txt  lexer_test.cpp  parser_test.cpp  token_types_test.cpp
test/perf/: CMakeLists.txt  main.cpp
test/semantics/: CMakeLists.txt  expr_analyzer_test.cpp  simplifier_test.cpp  type_analyzer_test.cpp  type_check_test.cpp
test/support/: CMakeLists.txt  test_compiler.cpp  test_compiler.hpp  test_context.cpp  test_context.hpp  test_parser.hpp  test_rng.hpp
test/syntax/: CMakeLists.txt  lexer_test.cpp  parser_test.cpp  token_test.cpp
test/unit_tests/: CMakeLists.txt
test/vm/: CMakeLists.txt  arrays.cpp  arrays_test.cpp  buffers_test.cpp  classes.cpp  classes_test.cpp  context.cpp  (+28 more)
(+1552 files in other folders)
