target_sources(tiro_objects
    PRIVATE
        assert.cpp
        assert.hpp
        debug.hpp
        bitops.hpp
        defs.cpp
        defs.hpp
        error.hpp
        error.cpp
        enum_flags.hpp
        fix.hpp
        format.cpp
        format.hpp
        fwd.hpp
        hash.hpp
        math.hpp
        overloaded.hpp
        safe_int.hpp
        scope_guards.hpp
        type_traits.hpp
)

add_subdirectory(adt)
add_subdirectory(entities)
add_subdirectory(memory)
add_subdirectory(ranges)
add_subdirectory(text)
